--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
-@import './_variables.sass';
+@import './_mixins';
+@import './_variables';
 @import './_reset';
-@import './_main.sass';
+@import './_main';
