--- a/css/style.css
+++ b/css/style.css
@@ -685,4 +685,58 @@ body.fixed {
   -webkit-transition-delay: 0.35s;
           transition-delay: 0.35s;
 }
+
+.cv-exmpl-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  grid-gap: 15px;
+  margin-top: 30px;
+}
+
+@media screen and (max-width: 767px) {
+  .cv-exmpl-list {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-gap: 30px;
+  }
+}
+
+.cv-exmpl-item {
+  position: relative;
+  width: 100%;
+  z-index: 10;
+}
+
+.cv-exmpl-item__pic {
+  margin: 0 auto;
+}
+
+.cv-exmpl-item__descr {
+  margin: 15px 0 0;
+  text-align: center;
+}
+
+.cv-exmpl-item__title {
+  font-size: 18px;
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+.cv-exmpl-item__title:before {
+  content: '';
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 15;
+}
 /*# sourceMappingURL=style.css.map */
