--- a/src/scss/_main.sass
+++ b/src/scss/_main.sass
@@ -396,3 +396,46 @@ body
 		@for $i from 1 through 7
 			&:nth-child(#{$i})
 				transition-delay: $i * 0.05s
+
+.cv-exmpl-list
+	display: grid
+	grid-template-columns: 1fr 1fr 1fr
+	grid-template-rows: auto
+	grid-gap: 15px
+	margin-top: 30px
+
+	+media($md)
+		grid-template-columns: 1fr
+		grid-gap: 30px
+
+.cv-exmpl-item
+	position: relative
+	width: 100%
+	z-index: 10
+
+	&__pic
+		margin: 0 auto
+
+	&__descr
+		margin: 15px 0 0
+		text-align: center
+
+	&__title
+		font-size: 18px
+		font-weight: 700
+		text-decoration: none
+		color: var(--color-text)
+
+		&:before
+			content: ''
+			position: absolute
+			display: block
+			top: 0
+			right: 0
+			bottom: 0
+			left: 0
+			width: 100%
+			height: 100%
+			z-index: 15
+
+	&__text
